--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "postcss-codepenify",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A CLI tool to get a Codepen template with specified PostCSS plugins",
   "main": "index.js",
   "author": "Sylvain Pollet-Villard",
   "license": "MIT",
   "dependencies": {
     "commander": "^2.9.0",
-    "copy-paste": "^1.3.0",
+    "file-url": "^2.0.2",
+    "fs-extra": "^3.0.0",
     "openurl": "^1.1.1",
-    "rimraf": "^2.6.1"
+    "replace-in-file": "^2.5.0"
   },
   "scripts": {
     "codepenify": "cd temp && codepenify postcss-short",
@@ -17,12 +18,5 @@
   },
   "bin": {
     "codepenify": "./bin/codepenify"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "browserify": "^14.3.0",
-    "postcss-grid-kiss": "^1.2.1",
-    "uglify-js": "^2.8.22"
   }
 }
