--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "postcss-codepenify",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "A CLI tool to get a Codepen template with specified PostCSS plugins",
   "main": "index.js",
   "author": "Sylvain Pollet-Villard",
+  "repository": "https://github.com/sylvainpolletvillard/postcss-codepenify",
   "license": "MIT",
   "dependencies": {
     "commander": "^2.9.0",
